syntax = "proto3";

package chatServer;

option go_package = "github.com/ELRAS1/chat-server/api/chatServer;chatServer";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message CreateRequest {repeated string usernames = 1;}

message CreateResponse {int64 id = 1;}

message DeleteRequest {int64 id = 1;}

message SendMessageRequest {
  int64 chat_id = 1;
  string from = 2;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}
service chatServer {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}
